--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           NEW_TITLE="New cards found at $(date --utc '+%Y/%m/%d %H:%Mhrs (UTC)')"
           NEW_TAG="cards_$(date --utc '+%Y-%m-%d/%Hh-%Mm')"
-          BODY_MRKDWN="$(cat ${CARDS_CHANGELOG_OUTPUT})"
+          BODY_MRKDWN=$(cat ${CARDS_CHANGELOG_OUTPUT})
           echo "::set-env name=NEW_TITLE::${NEW_TITLE}"
           echo "::set-env name=NEW_TAG::${NEW_TAG}"
           echo "::set-env name=BODY_MRKDWN::${BODY_MRKDWN}"
