--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -65,17 +65,13 @@ jobs:
           echo "::set-env name=BODY_MRKDWN::${BODY_MRKDWN}"
           echo "le markdown ${BODY_MRKDWN}"
 
-      - name: Build docker image
+      - name: Create new release
         if: env.NEW_CARDS == 'true'
-        run: echo "${{env.BODY_MRKDWN}}"
-
-      # - name: Create new release
-      #   if: env.NEW_CARDS == 'true'
-      #   uses: Xotl/cool-github-releases@v1
-      #   with:
-      #     mode: update
-      #     tag_name: ${{env.NEW_TAG}}
-      #     release_name: "${{env.NEW_TITLE}} 🎉"
-      #     body_mrkdwn: ${{env.BODY_MRKDWN}}
-      #     assets: ${{env.CARDS_OUTPUT}}
-      #     github_token: ${{ github.token }}
+        uses: Xotl/cool-github-releases@v1
+        with:
+          mode: update
+          tag_name: ${{env.NEW_TAG}}
+          release_name: "🎉 ${{env.NEW_TITLE}}"
+          body_mrkdwn: ${{env.BODY_MRKDWN}}
+          assets: ${{env.CARDS_OUTPUT}}
+          github_token: ${{ github.token }}
