--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -1,9 +1,8 @@
 name: 'DBS Scraper | Web deploy'
 
 on:
-  push:
-    tags:
-      - 'cards_**'
+  release:
+    types: [published, edited]
 
 jobs:
   deploy:
@@ -11,40 +10,44 @@ jobs:
     runs-on: ubuntu-latest
     env:
       LATEST_RELEASE_CARDS_FILE: ./web-page/src/cards.json
+      GITHUB_CONTEXT: ${{ toJson(github) }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checking event data
+        run: actions/checkout@v2
 
-      - name: Download cards.json from latest release
-        uses: Xotl/cool-github-releases@v1
-        with:
-          assets: cards.json|${{env.LATEST_RELEASE_CARDS_FILE}}
-          github_token: ${{ github.token }} 
+    #   - name: Checkout
+    #     uses: actions/checkout@v2
 
-      - name: Build Docker image
-        run: |
-          docker build --no-cache -t dbs-web ./web-page
+    #   - name: Download cards.json from latest release
+    #     uses: Xotl/cool-github-releases@v1
+    #     with:
+    #       assets: cards.json|${{env.LATEST_RELEASE_CARDS_FILE}}
+    #       github_token: ${{ github.token }} 
+
+    #   - name: Build Docker image
+    #     run: |
+    #       docker build --no-cache -t dbs-web ./web-page
       
-      - name: Build app files
-        run: |
-          docker run --name dbs-container dbs-web npm run build
+    #   - name: Build app files
+    #     run: |
+    #       docker run --name dbs-container dbs-web npm run build
       
-      - name: Extract build files & prepare folder
-        run: |
-          git rm -rf .
-          git clean -fxd
-          docker cp dbs-container:/home/node/app/build/. ./
-          docker rm dbs-container
+    #   - name: Extract build files & prepare folder
+    #     run: |
+    #       git rm -rf .
+    #       git clean -fxd
+    #       docker cp dbs-container:/home/node/app/build/. ./
+    #       docker rm dbs-container
 
-      - name: Push to gh-pages branch
-        env:
-          REMOTE_REPO: https://${{ github.token }}@github.com/${{ github.repository }}.git
-          NEW_TAG: web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')
-        run: |
-          git config user.name "github"
-          git config user.email "github@users.noreply.github.com"
-          git add -A
-          git commit -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
-          git tag -a "${{env.NEW_TAG}}" -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
-          git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
+    #   - name: Push to gh-pages branch
+    #     env:
+    #       REMOTE_REPO: https://${{ github.token }}@github.com/${{ github.repository }}.git
+    #       NEW_TAG: web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')
+    #     run: |
+    #       git config user.name "github"
+    #       git config user.email "github@users.noreply.github.com"
+    #       git add -A
+    #       git commit -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
+    #       git tag -a "${{env.NEW_TAG}}" -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
+    #       git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
