--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -74,4 +74,4 @@ jobs:
           release_name: "🎉 ${{env.NEW_TITLE}}"
           body_mrkdwn: ${{env.BODY_MRKDWN}}
           assets: ${{env.CARDS_OUTPUT}}
-          github_token: ${{ github.token }}
+          github_token: ${{ secrets.GITHUB_OAUTH_TOKEN }}
