--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -43,11 +43,11 @@ jobs:
       - name: Push to gh-pages branch
         env:
           REMOTE_REPO: https://${{ github.token }}@github.com/${{ github.repository }}.git
-          NEW_TAG: web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')
         run: |
+          NEW_TAG="web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')"
           git config user.name "github"
-          git config user.email "github@users.noreply.github.com"
+          git config user.email "noreply@github.com"
           git add -A
-          git commit -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
-          git tag -a "${{env.NEW_TAG}}" -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
+          git commit -m "${NEW_TAG} | Auto pushed from Github Actions"
+          git tag -a "${NEW_TAG}" -m "${NEW_TAG} | Auto pushed from Github Actions"
           git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
