--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -39,6 +39,7 @@ jobs:
           git clean -fxd
           docker cp dbs-container:/home/node/app/build/. ./
           docker rm dbs-container
+          touch .nojekyll
 
       - name: Push to gh-pages branch
         env:
