--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -43,8 +43,7 @@ jobs:
 
       - name: Push to gh-pages branch
         env:
-          REMOTE_REPO: https://x-access-token:${{ secrets.GITHUB_OAUTH_TOKEN }}@github.com/${{ github.repository }}.git
-          # REMOTE_REPO: https://${{ secrets.GITHUB_OAUTH_TOKEN }}@github.com/${{ github.repository }}.git
+          REMOTE_REPO: https://${{ github.token }}@github.com/${{ github.repository }}.git
         run: |
           NEW_TAG="web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')"
           git config user.name "github"
@@ -52,8 +51,11 @@ jobs:
           git add -A
           git commit -m "${NEW_TAG} | Auto pushed from Github Actions"
           git tag -a "${NEW_TAG}" -m "${NEW_TAG} | Auto pushed from Github Actions"
-          git remote add pages ${REMOTE_REPO}
-          git push pages HEAD:gh-pages -f --follow-tags
+          git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
           
-
-# git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
+      - name: Push to gh-pages branch
+        run: >-
+          curl -L -X POST 
+          -H "Content-Type: application/json"
+          -H "Authorization: token ${{ github.token }}"
+          "https://api.github.com/repos/${{ github.repository }}/builds"
