--- a/web-page/package.json
+++ b/web-page/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.2.3",
+    "@reduxjs/toolkit": "^1.2.5",
     "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^7.0.3",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.1",
-    "redux-observable": "^1.1.0",
-    "rxjs": "^6.5.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "^3.4.0",
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.4"
   },
   "homepage": "https://xotl.github.io/dbs-scraper",
   "scripts": {
