--- a/web-page/package.json
+++ b/web-page/package.json
@@ -7,6 +7,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.3",
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
@@ -19,5 +20,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
