--- a/TypeScriptScraper/package.json
+++ b/TypeScriptScraper/package.json
@@ -4,9 +4,10 @@
   "description": "test web scraper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run clean && tsc && node dist/test/testCardScraper.js",
     "start": "tsc && node dist/index.js",
-    "dev": "nodemon --watch 'src/*.ts' --exec ts-node src/index.ts"
+    "dev": "nodemon --watch 'src/*.ts' --exec ts-node src/index.ts",
+    "clean": "rimraf dist/*"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +17,10 @@
     "cheerio": "^1.0.0-rc.10",
     "fs": "^0.0.1-security",
     "nodemon": "^2.0.16",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.8.1"
   }
 }
